--- a/twiddler.html
+++ b/twiddler.html
@@ -9,6 +9,7 @@
     />
 
     <title>Twiddler!</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
     <script src="data-generator.js"></script>
     <script src="index.js"></script>
